--- a/contato-kvd/contato.html
+++ b/contato-kvd/contato.html
@@ -16,7 +16,7 @@
                     <footer class="container-header">
                         <div class="logo-container">
                             <div class="main-logo">
-                              <h1>K.V.D.</h1>
+                                <a href="../index.html"><h1>K.V.D.</h1></a>
                             </div>
                         </div> 
                         <nav>
