--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <div class="container-header">
                 <div class="logo-container">
-                    <div class="main-logo"><h1>KVD</h1></div>
+                    <div class="main-logo"><h1>K.V.D.</h1></div>
                     <div class="slogan">Become your dream in reality</div>
                 </div>                 
             </div>
@@ -23,9 +23,9 @@
         <section>
             <div class="container">
                 <h2 class="heading">Bem-vindo à Kire Visual Designers</h1>
-                <p class="subheading">Venda de sites e designers de sua preferência ou pré-definidos aqui na KVD</p>
+                <p class="subheading">Venda de sites e designers de sua preferência ou pré-definidos aqui na KVD.</p>
                 <h3 class="section-title">Dê o próximo passo para o seu sucesso</h2>
-                <p class="subheading">Clique no botão abaixo para explorar nossos serviços</p>
+                <p class="subheading">Clique no botão abaixo para explorar nossos serviços.</p>
                 <a class="button" href="pag-loja/pag-inicial.html">Explorar</a>
             </div>
         </section>
