--- a/pag-loja/pag-inicial.html
+++ b/pag-loja/pag-inicial.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Venda de sites e designers de sua preferência ou pré definidos aqui na KVD">
     <title>KIRE VISUAL DESIGNERS</title>
     <link rel="stylesheet" href="stylesPag.css">
+    <script src="pagloja.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
                     <footer class="container-header">
                         <div class="logo-container">
                             <div class="main-logo">
-                              <h1>K.V.D.</h1>
+                                <a href="../index.html"><h1>K.V.D.</h1></a>
                             </div>
                         </div> 
                         <nav>
