--- a/projetos-kvd/projetos.html
+++ b/projetos-kvd/projetos.html
@@ -16,7 +16,7 @@
                     <footer class="container-header">
                         <div class="logo-container">
                             <div class="main-logo">
-                              <h1>K.V.D.</h1>
+                                <a href="../index.html"><h1>K.V.D.</h1></a>
                             </div>
                         </div> 
                         <nav>
@@ -38,13 +38,13 @@
                         <div class="service-img">
                             <div class="img-container">
                                 <img class="img-sequence" src="img/DoguinhoMeu.png" alt="Imagem 1">
-                                <img class="img-sequence" src="img/PmCast.png" alt="Imagem 3">
-                                <img class="img-sequence" src="img/Finalização.png" alt="Imagem 3">
+                                <!-- <img class="img-sequence" src="img/PmCast.png" alt="Imagem 3"> -->
+                                <!-- <img class="img-sequence" src="img/Finalização.png" alt="Imagem 3"> -->
                                 <img class="img-sequence" src="img/PNG-LOGOeNOME.png" alt="Imagem 4">
                                 <img class="img-sequence" src="img/Logo-Rafa.png" alt="Imagem 5">
-                                <img class="img-sequence" src="img/amor no ar.png" alt="Imagem 6">
-                                <img class="img-sequence" src="img/CulturaMercadoria.png" alt="Imagem 7">
-                                <img class="img-sequence" src="img//Parabola do reino.png" alt="Imagem 8">
+                                <!-- <img class="img-sequence" src="img/amor no ar.png" alt="Imagem 6"> -->
+                                <!-- <img class="img-sequence" src="img/CulturaMercadoria.png" alt="Imagem 7"> -->
+                                <!-- <img class="img-sequence" src="img//Parabola do reino.png" alt="Imagem 8"> -->
                                 <!-- <img class="img-sequence" src="" alt="Imagem 9">
                                     <img class="img-sequence" src=""Imagem 10"> -->
     
