--- a/sobre-kvd/sobre.html
+++ b/sobre-kvd/sobre.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Venda de sites e designers de sua preferência ou pré definidos aqui na KVD">
-    <title>KIRE VISUAL DESIGNERS</title>
     <link rel="stylesheet" href="sobre.css">
+    <script src="sobre.js" defer></script>
+    <title>KIRE VISUAL DESIGNERS</title>
+    
+
 </head>
 
 <body>
@@ -16,7 +19,7 @@
                 <footer class="container-header">
                     <div class="logo-container">
                         <div class="main-logo">
-                          <h1>K.V.D.</h1>
+                            <a href="../index.html"><h1>K.V.D.</h1></a>
                         </div>
                     </div> 
                     <nav>
@@ -48,10 +51,6 @@
             <p class="footer-text">&copy; 2023 KIRE VISUAL DESIGNER. Todos os direitos reservados.</p>  
         </footer>
     </div>
-
-    <script>
-        initializeImageClick();
-    </script>
 </body>
 
 </html>
