Atualização 14/11/2023: Gradiente e Projetos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="content">
         <header>
-            <div class="container-header">
+            <div class="container-header background-gradient">
                 <div class="logo-container">
                     <div class="main-logo"><h1>K.V.D.</h1></div>
                     <div class="slogan">Become your dream in reality</div>
@@ -32,7 +32,7 @@
     </div>
     
 
-    <footer class="footer">
+    <footer class="footer background-gradient">
             <p class="footer-text">&copy; 2023 KIRE VISUAL DESIGNER. Todos os direitos reservados.</p>
     </footer>
 </body>
