--- a/projetos-kvd/projetos.html
+++ b/projetos-kvd/projetos.html
@@ -13,7 +13,7 @@
     <div class="content">
         <main>
             <header>
-                    <footer class="container-header">
+                    <footer class="container-header background-gradient">
                         <div class="logo-container">
                             <div class="main-logo">
                                 <a href="../index.html"><h1>K.V.D.</h1></a>
@@ -33,31 +33,29 @@
                 <br>
                 <div class="container">
                     <h2 class="pulse">Projetos em Destaque</h2>
-                            <h5>Clique na imagem para trocar</h5>
-                    <div class="box-img">
-                        <div class="service-img">
-                            <div class="img-container">
-                                <img class="img-sequence" src="img/DoguinhoMeu.png" alt="Imagem 1">
-                                <!-- <img class="img-sequence" src="img/PmCast.png" alt="Imagem 3"> -->
-                                <!-- <img class="img-sequence" src="img/Finalização.png" alt="Imagem 3"> -->
-                                <img class="img-sequence" src="img/PNG-LOGOeNOME.png" alt="Imagem 4">
-                                <img class="img-sequence" src="img/Logo-Rafa.png" alt="Imagem 5">
-                                <!-- <img class="img-sequence" src="img/amor no ar.png" alt="Imagem 6"> -->
-                                <!-- <img class="img-sequence" src="img/CulturaMercadoria.png" alt="Imagem 7"> -->
-                                <!-- <img class="img-sequence" src="img//Parabola do reino.png" alt="Imagem 8"> -->
-                                <!-- <img class="img-sequence" src="" alt="Imagem 9">
-                                    <img class="img-sequence" src=""Imagem 10"> -->
-    
-                                <!-- <img class="img-sequence" src="" alt="Imagem 10"> -->
+                    <div class="grid-img">
+                        <div class="boxImg">
+                            <div class="boxImg-container">
+                                <img src="img/DoguinhoMeu.png" alt="Imagem 1">
                             </div>
                         </div>
+                        <div class="boxImg">
+                            <div class="boxImg-container">
+                                <img src="img/PNG-LOGOeNOME.png" alt="Imagem 2">
+                            </div>
+                        </div>
+                        <div class="boxImg">
+                            <div class="boxImg-container">
+                                <img src="img/Logo-Rafa.png" alt="Imagem 3">
+                            </div>
+                        </div>              
                     </div>
                 </div>        
             </section>
         </main>
     </div>
-    <div class="end-the-page">
-        <footer class="footer">
+    <div class="end-the-page ">
+        <footer class="footer background-gradient">
                 <p class="footer-text">&copy; 2023 KIRE VISUAL DESIGNER. Todos os direitos reservados.</p>  
         </footer>
     </div>
