--- a/contato-kvd/contato.html
+++ b/contato-kvd/contato.html
@@ -13,7 +13,7 @@
     <div class="content">
         <main>
             <header>
-                    <footer class="container-header">
+                    <footer class="container-header background-gradient">
                         <div class="logo-container">
                             <div class="main-logo">
                                 <a href="../index.html"><h1>K.V.D.</h1></a>
@@ -56,7 +56,7 @@
         </main>
     </div>
     <div class="end-the-page">
-        <footer class="footer">
+        <footer class="footer background-gradient">
                 <p class="footer-text">&copy; 2023 KIRE VISUAL DESIGNER. Todos os direitos reservados.</p>  
         </footer>
     </div>
