--- a/sobre-kvd/sobre.html
+++ b/sobre-kvd/sobre.html
@@ -16,7 +16,7 @@
     <div class="content">
         <main>
             <header>
-                <footer class="container-header">
+                <footer class="container-header background-gradient">
                     <div class="logo-container">
                         <div class="main-logo">
                             <a href="../index.html"><h1>K.V.D.</h1></a>
@@ -47,7 +47,7 @@
         </main>
     </div>
     <div class="end-the-page">
-        <footer class="footer">
+        <footer class="footer background-gradient">
             <p class="footer-text">&copy; 2023 KIRE VISUAL DESIGNER. Todos os direitos reservados.</p>  
         </footer>
     </div>
