--- a/projetos-kvd/projetos.html
+++ b/projetos-kvd/projetos.html
@@ -36,19 +36,14 @@
                     <div class="grid-img">
                         <div class="boxImg">
                             <div class="boxImg-container">
-                                <img src="img/DoguinhoMeu.png" alt="Imagem 1">
+                                <img src="img/CulturaMercadoria.png" alt="Imagem 1">
                             </div>
                         </div>
                         <div class="boxImg">
                             <div class="boxImg-container">
-                                <img src="img/PNG-LOGOeNOME.png" alt="Imagem 2">
+                                <img src="img/Parabola do reino.png" alt="Imagem 2">
                             </div>
-                        </div>
-                        <div class="boxImg">
-                            <div class="boxImg-container">
-                                <img src="img/Logo-Rafa.png" alt="Imagem 3">
-                            </div>
-                        </div>              
+                        </div>            
                     </div>
                 </div>        
             </section>
