17/11/2023: Formatação de texto e Ajustes Projetos

--- a/pag-loja/pag-inicial.html
+++ b/pag-loja/pag-inicial.html
@@ -38,7 +38,7 @@
                             <h3>Design de Mídias Sociais:</h3>
                             <li>
                                 Criação de imagens e gráficos para postagens em redes sociais, capas de perfil e
-                                anúncios.
+                                anúncios;
                             </li>
                             <li>
                                 Adaptação às diretrizes e identidade visual de cada plataforma.
@@ -47,7 +47,7 @@
                         <div class="service-item">
                             <h3>Ilustração:</h3>
                             <li>
-                                Desenho e criação de ilustrações digitais para complementar conteúdos visuais.
+                                Desenho e criação de ilustrações digitais para complementar conteúdos visuais;
                             </li>
                             <li>
                                 Ilustrações para livros, histórias em quadrinhos, infográficos, mídias sociais, entre
@@ -57,7 +57,7 @@
                         <div class="service-item">
                             <h3>Identidade Visual: </h3>
                             <li>
-                                Criação de logotipos e elementos visuais que representam a identidade da sua marca.
+                                Criação de logotipos e elementos visuais que representam a identidade da sua marca;
                             </li>
                             <li>
                                 Desenvolvimento de paletas de cores, tipografia e estilos visuais consistentes.
@@ -66,8 +66,7 @@
                         <div class="service-item">
                             <h3>Design de Materiais Impressos:</h3>
                             <li>
-                                Layouts e elementos gráficos para cartazes, panfletos, embalagens, banners, revistas,
-                                jornais, entre outros.
+                                Layouts e elementos gráficos para cartazes, panfletos, embalagens, banners, revistas, entre outros;
                             </li>
                             <li>
                                 Adaptação de materiais para diferentes formatos e tamanhos.
@@ -77,7 +76,7 @@
                             <h3>Design de Interfaces Digitais:</h3>
                             <li>
                                 Criação de interfaces atraentes e intuitivas para sites, aplicativos móveis e outros
-                                produtos digitais.
+                                produtos digitais;
                             </li>
                             <li>
                                 Consideração da experiência do usuário e usabilidade durante todo o processo de design.
@@ -86,7 +85,7 @@
                         <div class="service-item">
                             <h3>Manipulação de Imagens:</h3>
                             <li>
-                                Edição e retoque de fotografias.
+                                Edição e retoque de fotografias;
                             </li>
                             <li>
                                 Ajuste de cores, composições e montagens de imagens.
@@ -95,7 +94,7 @@
                         <div class="service-item">
                             <h3>Animação:</h3>
                             <li>
-                                Criação de animações em 2D ou 3D para vídeos, anúncios, apresentações, entre outros.
+                                Criação de animações em 2D ou 3D para vídeos, anúncios, apresentações, entre outros;
                             </li>
                             <li>
                                 Uso de software de animação para trazer vida aos projetos.
