--- a/projetos-kvd/projetos.html
+++ b/projetos-kvd/projetos.html
@@ -33,17 +33,37 @@
                 <br>
                 <div class="container">
                     <h2 class="pulse">Projetos em Destaque</h2>
-                    <div class="grid-img">
+                    <div class="grid">
                         <div class="boxImg">
                             <div class="boxImg-container">
                                 <img src="img/CulturaMercadoria.png" alt="Imagem 1">
                             </div>
+                            <h3 class="efeito-vidro">Pôster de Instagram</h3>
                         </div>
                         <div class="boxImg">
                             <div class="boxImg-container">
                                 <img src="img/Parabola do reino.png" alt="Imagem 2">
                             </div>
-                        </div>            
+                            <h3 class="efeito-vidro">Panfleto de Divulgação</h3>
+                        </div>           
+                    </div>
+                    <div class="grid">
+                        <div class="projeto background-gradient2">
+                            <div class="projeto-content">
+                                <h3>Projeto de Portifólio Digital (Site)<h3>
+                                <img src="img/portifolio_projeto.png" alt="Projeto 1">
+                                <p>HTML, CSS e JavaScript.</p>
+                                <a href="https://portifolio-erik-santos.vercel.app" target="_blank" class="button">Ver Mais</a>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="grid">
+                        <div class="boxImg-logo">
+                            <div class="boxImg-logo-container">
+                                <img src="img/PNG-LOGOeNOME.png" alt="Imagem 1">
+                            </div>
+                            <h3 class="efeito-vidro">logo de Empresa</h3>
+                        </div>          
                     </div>
                 </div>        
             </section>
